--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Bootstrap 3, from LayoutIt!</title>
-
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
-
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>jQuery UI Datepicker - Default functionality</title>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
- 
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"/>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"/>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <script>
   $( function() {
     $( "#datepicker" ).datepicker();
@@ -29,21 +28,35 @@
     $( "#datepicker1" ).datepicker();
   } );
   </script>
+    
+  
+  
+  
+  
+  
+  
+  
   </head>
   <body>
 
     <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<h3>
-				Hotel Management System
-			</h3>
+			
+			
+			
+			
+			
+			<h3>Hotel Management System</h3>
+			
+			
+			
 			<ul class="breadcrumb">
+			
+			
+				<li><a href="#">Home</a> <span class="divider"></span></li>
 				<li>
-					<a href="#">Home</a> <span class="divider">/</span>
-				</li>
-				<li>
-					<a href="#">Library</a> <span class="divider">/</span>
+					<a href="#">Library</a> <span class="divider"></span>
 				</li>
 				<li class="active">
 					Data
@@ -56,11 +69,8 @@
 			
 			<div class="form-group">
   <label for="sel1">City:</label>
-  <select class="form-control" id="sel2">
-    <option>Bengaluru</option>
-    <option>Delhi</option>
-    <option>Mumbai</option>
-    <option>Hyderbad</option>
+  <select class="form-control" id="sel2" th:each="Cities : ${city}">
+    <option th:text="${city.CityName}"></option>
   </select>
 </div>
 		</div>
